--- a/myPage.html
+++ b/myPage.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>myBlog</title>
+    <style>
+        img{
+            width:75%;
+            margin:50px auto;
+        }
+    </style>
 </head>
 <body>
 <h1>Hello github!</h1>
-<img src="./1590763718623.jpg">
+<img src="./img/pic1.jpg">
+<img src="https://oldGentle.github.io/img/pic2.jpg">
 </body>
 </html>
