--- a/myPage.html
+++ b/myPage.html
@@ -14,7 +14,7 @@
             
         }
         .learn{
-            margin:50px auto;
+            margin-left:150px;
         }
         h1,h2{
             margin:10px auto;
